Fix cookie container to be visible.

--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -192,17 +192,16 @@
 // ------------------------------
 
 .bk-cookie-container {
-	display: none; // TODO: set to "table" before publishing the template.
+	display: table;
 	text-align: left;
 	border: none;
 	position: fixed;
-	top: @header-height;
-	bottom: unset;
-	left: 0;
-	right: 0;
-	margin: 0;
+	top: unset;
+	bottom: 0;
+	margin: 0 auto;
 	text-align: center;
-	width: 100%;
+	width: auto;
+	max-width: 1240px;
 	
 	p, a, .bk-cookie-close-button {
 		display: table-cell;
@@ -219,6 +218,7 @@
 	
 	p {
 		padding: 0.5em 1em 1em 1em;
+		text-align: left;
 	}
 	
 	.bk-cookie-close-button {
